[gd_scene load_steps=17 format=3 uid="uid://cyhnm7c0rnlb1"]

[ext_resource type="Script" path="res://scripts/menus/main_menu.gd" id="1_5y3we"]
[ext_resource type="Texture2D" uid="uid://dqw00mbvajfdm" path="res://assets/images/ui/menu_background.png" id="2_4uadv"]
[ext_resource type="Texture2D" uid="uid://b1oqyvxrg33k0" path="res://assets/images/ui/logo_chinchon.png" id="3_3l8oa"]
[ext_resource type="FontFile" uid="uid://cbrwe0wv4lsqf" path="res://assets/fonts/Montserrat-Medium.ttf" id="4_s4v30"]
[ext_resource type="FontFile" uid="uid://bblm4btrpnsxk" path="res://assets/fonts/Montserrat-Bold.ttf" id="5_oohxx"]
[ext_resource type="AudioStream" uid="uid://dp1s5spc7eiys" path="res://assets/audio/music/menu_music.ogg" id="6_w0v0l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rbkc8"]
bg_color = Color(0.219608, 0.45098, 0.219608, 0.847059)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.32549, 0.639216, 0.32549, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.196078)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1axim"]
bg_color = Color(0.176471, 0.364706, 0.176471, 0.921569)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.258824, 0.513726, 0.258824, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.196078)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q8y4k"]
bg_color = Color(0.215686, 0.384314, 0.588235, 0.847059)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.286275, 0.517647, 0.8, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.196078)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5q2nx"]
bg_color = Color(0.529412, 0.211765, 0.211765, 0.847059)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.701961, 0.286275, 0.286275, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.196078)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n3kln"]
bg_color = Color(0.0431373, 0.211765, 0.329412, 0.921569)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.121569, 0.47451, 0.741176, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.196078)
shadow_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h4s2c"]
bg_color = Color(0.329412, 0.113725, 0.113725, 0.921569)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.678431, 0.227451, 0.227451, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.196078)
shadow_size = 8

[sub_resource type="Animation" id="Animation_r5wst"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainContainer/TitleContainer/LogoTexture:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainContainer/ButtonsContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VersionLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6beh0"]
resource_name = "menu_intro"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainContainer/TitleContainer/LogoTexture:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.7, 0.9),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1.1, 1.1), Vector2(0.95, 0.95), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainContainer/ButtonsContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8, 1.5),
"transitions": PackedFloat32Array(0.5, 0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VersionLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5, 2),
"transitions": PackedFloat32Array(0.5, 0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_c3g2g"]
resource_name = "menu_loop"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainContainer/TitleContainer/LogoTexture:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(0.5, 0.5, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qtnm4"]
_data = {
"RESET": SubResource("Animation_r5wst"),
"menu_intro": SubResource("Animation_6beh0"),
"menu_loop": SubResource("Animation_c3g2g")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5y3we")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4uadv")
expand_mode = 1
stretch_mode = 6

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="TitleContainer" type="CenterContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LogoTexture" type="TextureRect" parent="MainContainer/TitleContainer"]
custom_minimum_size = Vector2(600, 300)
layout_mode = 2
texture = ExtResource("3_3l8oa")
expand_mode = 1
stretch_mode = 5

[node name="ButtonsContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15
alignment = 1

[node name="SinglePlayerButton" type="Button" parent="MainContainer/ButtonsContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("5_oohxx")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_rbkc8")
theme_override_styles/hover = SubResource("StyleBoxFlat_1axim")
text = "Un Jugador"

[node name="MultiplayerButton" type="Button" parent="MainContainer/ButtonsContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("5_oohxx")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_q8y4k")
text = "Multijugador"

[node name="SettingsButton" type="Button" parent="MainContainer/ButtonsContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("5_oohxx")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_q8y4k")
text = "Configuraci√≥n"

[node name="ExitButton" type="Button" parent="MainContainer/ButtonsContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("5_oohxx")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_5q2nx")
text = "Salir"

[node name="SpacerBottom" type="Control" parent="MainContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -40.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_s4v30")
theme_override_font_sizes/font_size = 14
text = "v1.0.0"
horizontal_alignment = 2
vertical_alignment = 2

[node name="PlayerSetupPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n3kln")

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerSetupPanel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="PlayerSetupPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_oohxx")
theme_override_font_sizes/font_size = 28
text = "Configuraci√≥n del Juego"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PlayerSetupPanel/VBoxContainer"]
layout_mode = 2

[node name="PlayerCountContainer" type="VBoxContainer" parent="PlayerSetupPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PlayerCountLabel" type="Label" parent="PlayerSetupPanel/VBoxContainer/PlayerCountContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_s4v30")
theme_override_font_sizes/font_size = 20
text = "N√∫mero de Jugadores"
horizontal_alignment = 1

[node name="PlayerCountSlider" type="HSlider" parent="PlayerSetupPanel/VBoxContainer/PlayerCountContainer"]
layout_mode = 2
min_value = 1.0
max_value = 7.0
value = 2.0
tick_count = 7
ticks_on_borders = true

[node name="PlayerCountValue" type="Label" parent="PlayerSetupPanel/VBoxContainer/PlayerCountContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_s4v30")
theme_override_font_sizes/font_size = 18
text = "Oponentes: 1"
horizontal_alignment = 1

[node name="DeckOptionsContainer" type="VBoxContainer" parent="PlayerSetupPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DeckTypeLabel" type="Label" parent="PlayerSetupPanel/VBoxContainer/DeckOptionsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_s4v30")
theme_override_font_sizes/font_size = 20
text = "Tipo de Baraja"
horizontal_alignment = 1

[node name="DeckTypeToggle" type="CheckButton" parent="PlayerSetupPanel/VBoxContainer/DeckOptionsContainer"]
layout_mode = 2
size_flags_horizontal = 4
button_pressed = true
text = "Baraja de 48 cartas"

[node name="TwoDeckContainer" type="HBoxContainer" parent="PlayerSetupPanel/VBoxContainer/DeckOptionsContainer"]
layout_mode = 2
alignment = 1

[node name="TwoDeckToggle" type="CheckButton" parent="PlayerSetupPanel/VBoxContainer/DeckOptionsContainer/TwoDeckContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Usar dos barajas"

[node name="TwoDeckLabel" type="Label" parent="PlayerSetupPanel/VBoxContainer/DeckOptionsContainer/TwoDeckContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("4_s4v30")
theme_override_font_sizes/font_size = 16
text = "(Recomendado para 5+ jugadores)"

[node name="HSeparator2" type="HSeparator" parent="PlayerSetupPanel/VBoxContainer"]
layout_mode = 2

[node name="StartGameButton" type="Button" parent="PlayerSetupPanel/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("5_oohxx")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_rbkc8")
text = "¬°Comenzar!"

[node name="BackButton" type="Button" parent="PlayerSetupPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_s4v30")
theme_override_font_sizes/font_size = 18
text = "Volver"

[node name="SettingsPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h4s2c")

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPanel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_oohxx")
theme_override_font_sizes/font_size = 28
text = "Configuraci√≥n"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="VolumeContainer" type="VBoxContainer" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MusicVolumeLabel" type="Label" parent="SettingsPanel/VBoxContainer/VolumeContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_s4v30")
theme_override_font_sizes/font_size = 18
text = "Volumen de M√∫sica"
horizontal_alignment = 1

[node name="MusicVolumeSlider" type="HSlider" parent="SettingsPanel/VBoxContainer/VolumeContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 0.8
ticks_on_borders = true

[node name="SFXVolumeLabel" type="Label" parent="SettingsPanel/VBoxContainer/VolumeContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_s4v30")
theme_override_font_sizes/font_size = 18
text = "Volumen de Efectos"
horizontal_alignment = 1

[node name="SFXVolumeSlider" type="HSlider" parent="SettingsPanel/VBoxContainer/VolumeContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0
ticks_on_borders = true

[node name="LanguageContainer" type="VBoxContainer" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LanguageLabel" type="Label" parent="SettingsPanel/VBoxContainer/LanguageContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_s4v30")
theme_override_font_sizes/font_size = 18
text = "Idioma"
horizontal_alignment = 1

[node name="LanguageOption" type="OptionButton" parent="SettingsPanel/VBoxContainer/LanguageContainer"]
layout_mode = 2
size_flags_horizontal = 4
item_count = 2
selected = 0
popup/item_0/text = "Espa√±ol"
popup/item_0/id = 0
popup/item_1/text = "English"
popup/item_1/id = 1

[node name="HSeparator2" type="HSeparator" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_s4v30")
theme_override_font_sizes/font_size = 18
text = "Volver"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qtnm4")
}

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_w0v0l")
volume_db = -10.0
bus = &"Music"